message TCatEntry {
    repeated group QueryCat = 1 {
        required string Query = 1;
        repeated uint32 Cat = 2;
        repeated uint32 NotInheritedCat = 3;
    }
}
